# coffee-craft-rest-api

./: .env  Cargo.toml  coffee.db
migrations/2023-06-29-190900_create_coffees/: down.sql  up.sql
migrations/2023-07-04-204839_create_collection/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
