[package]
name = "coffee_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
dotenv = "0.15.0"
